// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Parser.ParseMusicDetail (ddrworld/error) 1`] = `
Object {
  "musics": Array [],
  "status": 1,
}
`;

exports[`Parser.ParseMusicDetail (ddrworld/hidden-song) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "containedVersion": null,
      "difficulty": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        10,
        13,
        0,
      ],
      "isDeleted": 0,
      "musicId": "oQq061q091Q16iOO9b8d9d0P9080qP6q",
      "title": "なんてシュペール",
      "type": 0,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseMusicDetail (ddrworld/no-challenge-chart) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "containedVersion": null,
      "difficulty": Array [
        3,
        7,
        9,
        12,
        0,
        7,
        9,
        13,
        0,
      ],
      "isDeleted": 0,
      "musicId": "I1qd16dPdqPi96ql0lP10OQDbo11D89P",
      "title": "恋時雨",
      "type": 0,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseMusicDetail (ddrworld/noLogin) 1`] = `
Object {
  "musics": Array [],
  "status": 2,
}
`;

exports[`Parser.ParseMusicDetail (ddrworld/normal) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "containedVersion": null,
      "difficulty": Array [
        4,
        7,
        12,
        14,
        17,
        8,
        13,
        15,
        17,
      ],
      "isDeleted": 0,
      "musicId": "Q9Q088PPd0bPi9QQ8iil1lQqPdiQP69D",
      "title": "恋する☆宇宙戦争っ!!",
      "type": 0,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseMusicDetail (error) 1`] = `
Object {
  "musics": Array [],
  "status": 1,
}
`;

exports[`Parser.ParseMusicDetail (grade) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "containedVersion": null,
      "difficulty": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        17,
      ],
      "isDeleted": 0,
      "musicId": "oiqql6iPq8Oq0QIqlqb1DOOO8ioPo8b9",
      "title": "",
      "type": 0,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseMusicDetail (noLogin) 1`] = `
Object {
  "musics": Array [],
  "status": 2,
}
`;

exports[`Parser.ParseMusicDetail (nonstop) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "containedVersion": null,
      "difficulty": Array [
        4,
        8,
        9,
        11,
        0,
        9,
        13,
        11,
        0,
      ],
      "isDeleted": 0,
      "musicId": "qbbOOO1QibO1861bqQII9lqlPiIoqb98",
      "title": "",
      "type": 0,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseMusicDetail (normal) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "containedVersion": null,
      "difficulty": Array [
        4,
        7,
        11,
        14,
        0,
        7,
        12,
        15,
        0,
      ],
      "isDeleted": 0,
      "musicId": "06O0ObdQobq86lPDo6P18dQ1QPdilIQO",
      "title": "妖隠し -あやかしかくし-",
      "type": 0,
    },
  ],
  "status": 0,
}
`;
